--- a/resources/js/Components/Home/bannerHero/bannerHero.module.scss
+++ b/resources/js/Components/Home/bannerHero/bannerHero.module.scss
@@ -19,7 +19,7 @@
 
 .contentContainer {
     position: relative;
-    z-index: 99;
+    z-index: 2;
     max-width: 1200px;
     width: 100%;
     display: flex;
@@ -40,7 +40,7 @@
         position: relative;
         background-color: #0C9C95;
         color: #fff;
-        z-index: 99;
+        z-index: 9;
         padding: 8px 8px 8px 16px;
         font-weight: 600;
         border-radius: 40px;
