--- a/resources/js/Components/Imprensa/VideosArea/VideosArea.module.scss
+++ b/resources/js/Components/Imprensa/VideosArea/VideosArea.module.scss
@@ -1,5 +1,5 @@
 .container {
-    max-width: 1300px;
+    max-width: 1200px;
     margin: 0 auto;
     margin-top: 40px;
     margin-bottom: 120px;
@@ -88,7 +88,7 @@
                 height: 100%;
                 object-fit: cover;
                 object-position: top;
-                max-height: 300px;
+                // height: 300px;
             }
 
             .buttonPlay {
@@ -188,13 +188,13 @@
 }
 
 @media (max-width: 1400px) {
-    .videoContainer {
-        padding: 0px 40px;
+    .container {
+        padding: 0px 20px;
     }
 }
 @media (max-width: 800px) {
 
-    .videoContainer {
+    .container {
         padding: 0px 20px;
 
         .internalArea {
